feat(docs): add styleguidist

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/roboto/roboto.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/material-icons/material-icons.css">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
